--- a/assets/style.css
+++ b/assets/style.css
@@ -32,3 +32,15 @@
 	left:-45px;
 	
 }
+
+.clear {
+	clear:both;
+}
+
+.post_item h3 a {
+	font-family:"Proxima Nova",sans-serif;
+	text-transform:lowercase;
+	text-shadow: -1px 0 0 rgba(0,150,255,0.5),
+			1px 0 0 rgba(255,0,0,0.5) !important;
+	text-decoration:none;
+}
