--- a/assets/style.css
+++ b/assets/style.css
@@ -38,6 +38,7 @@
 }
 
 .post_item h3 a {
+	color:#393939;
 	font-family:"Proxima Nova",sans-serif;
 	text-transform:lowercase;
 	text-shadow: -1px 0 0 rgba(0,150,255,0.5),
