--- a/assets/style.css
+++ b/assets/style.css
@@ -46,7 +46,14 @@
 	color:#393939;
 	font-family:"Proxima Nova",sans-serif;
 	text-transform:lowercase;
-	text-shadow: -1px 0 0 rgba(0,150,255,0.5),
-			1px 0 0 rgba(255,0,0,0.5) !important;
+	text-shadow: -1px 0 0 rgba(0,150,255,0.7),
+			1px 0 0 rgba(255,0,0,0.7) !important;
 	text-decoration:none;
+}
+
+.post_body {
+	line-height:1.7;
+	font-family:"Tisa Pro",serif;
+	color:#ccc;
+	font-size:14px;
 }
