--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,8 @@
 	font-family:"Proxima Nova",sans-serif;
 	text-transform:lowercase;
 	text-decoration:none;
+	font-size:20px !important;
+	font-weight:700;
 }
 .post_item h3 a:hover {
 	color:#393939;
@@ -58,4 +60,10 @@
 	
 	font-size:14px;
 	
+}
+
+.post_item h3 {
+	font-size:12px;
+	font-family:"Proxima Nova",sans-serif;
+	font-weight:100;
 }
