--- a/assets/style.css
+++ b/assets/style.css
@@ -73,11 +73,11 @@
 (min-resolution: 192dpi) { 
     #logo a {
 		background-image:url('logo@2x.png');
-		background-size:229px 34px;
+		/*background-size:229px 34px;*/
 	}
 	#logo a:hover { 
 		background-image:url('logohover@2x.png');
-		background-size:234px 34px;
+		/*background-size:234px 34px;*/
 		
 		
 	}
