--- a/assets/style.css
+++ b/assets/style.css
@@ -52,29 +52,9 @@
 			1px 0 0 rgba(255,0,0,0.7) !important;
 	text-decoration:none;
 }
-
-.post_single h3 a {
-	color:#393939;
-	font-family:"Proxima Nova",sans-serif;
-	text-transform:lowercase;
-	text-decoration:none;
-	font-size:20px !important;
-	font-weight:700;
-}
-.post_single h3 a:hover {
-	color:#393939;
-	font-family:"Proxima Nova",sans-serif;
-	text-transform:lowercase;
+.post_item h3 span {
 	text-shadow: -1px 0 0 rgba(0,150,255,0.7),
 			1px 0 0 rgba(255,0,0,0.7) !important;
-	text-decoration:none;
-	cursor:default;
-}
-
-.post_single h3 {
-	font-size:12px;
-	font-family:"Proxima Nova",sans-serif;
-	font-weight:100;
 }
 
 .post_body {
