--- a/assets/style.css
+++ b/assets/style.css
@@ -53,6 +53,12 @@
 	text-decoration:none;
 }
 .post_item h3 span {
+	color:#393939;
+	font-family:"Proxima Nova",sans-serif;
+	text-transform:lowercase;
+	text-decoration:none;
+	font-size:20px !important;
+	font-weight:700;
 	text-shadow: -1px 0 0 rgba(0,150,255,0.7),
 			1px 0 0 rgba(255,0,0,0.7) !important;
 }
